--- a/itemRental-Reactjs/package.json
+++ b/itemRental-Reactjs/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "expensify",
-  "version": "1.0.0",
+  "name": "rentx",
+  "version": "0.0.1",
   "main": "index.js",
-  "author": "Andrew Mead",
+  "author": "Krisztian Kristo & Hojda Iulian",
   "license": "MIT",
   "scripts": {
-    "start": "node server/server.js",
+    "init-assets": "webpack",
+    "init-server": "node server/server.js",
+    "start": "npm run init-assets && npm run init-server",
+    "watch": "webpack --watch",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -13,10 +16,10 @@
     "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
-    "@date-io/date-fns": "0.0.2",
-    "@date-io/moment": "0.0.2",
-    "@material-ui/core": "^1.4.2",
-    "@material-ui/icons": "^2.0.0",
+    "@date-io/date-fns": "1.0.1",
+    "@date-io/moment": "1.0.1",
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
@@ -25,19 +28,19 @@
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
-    "css-loader": "0.28.4",
+    "css-loader": "2.1.0",
     "date-fns": "^2.0.0-alpha.21",
-    "express": "4.15.4",
+    "express": "4.16.4",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "^2.0.0",
     "history": "^4.7.2",
     "install-prompt-banner": "^0.0.6",
     "jwt-decode": "^2.2.0",
-    "material-ui-pickers": "^2.0.5",
+    "material-ui-pickers": "^2.1.1",
     "moment": "^2.23.0",
     "node-sass": "4.5.3",
-    "normalize.css": "7.0.0",
-    "react": "^16.4.1",
+    "normalize.css": "8.0.0",
+    "react": "^16.7.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
@@ -56,6 +59,7 @@
     "uuid": "3.1.0",
     "validator": "^10.5.0",
     "webpack": "3.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-dev-server": "^2.5.1",
+    "webpack-watch-server": "^1.2.1"
   }
 }
